--- a/cfn-resources/database-user/Makefile
+++ b/cfn-resources/database-user/Makefile
@@ -2,11 +2,11 @@
 
 build:
 	cfn generate
-	env GOOS=linux go build -ldflags="-s -w" -tags="logging" -o bin/handler cmd/main.go
+	env CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -ldflags="-s -w" -tags="logging" -o bin/handler cmd/main.go
 
 test:
 	cfn generate
-	env GOOS=linux go build -ldflags="-s -w" -o bin/handler cmd/main.go
+	env CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -ldflags="-s -w" -o bin/handler cmd/main.go
 
 clean:
 	rm -rf bin
