--- a/cfn-resources/project/Makefile
+++ b/cfn-resources/project/Makefile
@@ -1,12 +1,12 @@
 .PHONY: build test clean
 
 build:
-	cfn generate
-	env CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -ldflags="-s -w" -tags="logging" -o bin/handler cmd/main.go
+	cfn generate || cat rpdk.log
+	env GOOS=linux go build -ldflags="-s -w" -tags="logging callback scheduler" -o bin/handler cmd/main.go
 
 test:
 	cfn generate
-	env CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -ldflags="-s -w" -o bin/handler cmd/main.go
+	env GOOS=linux go build -ldflags="-s -w" -o bin/handler cmd/main.go
 
 clean:
 	rm -rf bin
