--- a/cfn-resources/project-ip-access-list/Makefile
+++ b/cfn-resources/project-ip-access-list/Makefile
@@ -5,7 +5,7 @@ build:
 
 test:
 	cfn generate
-	env CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -ldflags="-s -w" -o bin/handler cmd/main.go
+	env GOOS=linux go build -ldflags="-s -w" -o bin/handler cmd/main.go
 
 clean:
 	rm -rf bin
