--- a/cfn-resources/cloud-provider-snapshots/.rpdk-config
+++ b/cfn-resources/cloud-provider-snapshots/.rpdk-config
@@ -1,4 +1,5 @@
 {
+    "artifact_type": "RESOURCE",
     "typeName": "MongoDB::Atlas::CloudProviderSnapshots",
     "language": "go",
     "runtime": "go1.x",
@@ -7,6 +8,6 @@
     "settings": {
         "importpath": "github.com/mongodb/mongodbatlas-cloudformation-resources/cloud-provider-snapshots",
         "protocolVersion": "2.0.0",
-        "pluginVersion": "2.0.3"
+        "pluginVersion": "2.0.4"
     }
 }
